syntax = "proto3";
package uniswapAPI; 
import "google/protobuf/empty.proto";



service uniswapAPI {
    rpc GetWalletBalance (BalanceRequest) returns (BalanceResponse);
    rpc GetPriceFromPool (PriceRequest) returns (PriceResponse);
    }


message BalanceRequest {
    string wallet_addr = 1;
}

message BalanceResponse {
    bool successful = 1;
    string message = 2;
}

message PriceResponse {
    bool successful = 1;
    string message = 2;
}

message PriceRequest {
   
    string contractAddress = 1;
}
